gitops/manifests/springboot-rollouts/namespace-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: springboot
  labels:
    istio-injection: enabled
