gitops/manifests/springboot-rollouts/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: springboot
  namespace: springboot

spec:

  replicas: 2

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: springboot

  template:

    metadata:
      labels:
        app: springboot

    spec:

      serviceAccountName: default

      containers:

        - name: springboot

          image: localhost:5100/platform-demo:floci-dev

          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:

            requests:
              cpu: 100m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:

            httpGet:
              path: /actuator/health
              port: 8080

            initialDelaySeconds: 10

          livenessProbe:

            httpGet:
              path: /actuator/health
              port: 8080

            initialDelaySeconds: 30

  strategy:

    canary:

      canaryService: springboot-canary
      stableService: springboot

      trafficRouting:

        istio:

          virtualService:

            name: springboot

            routes:
              - primary

      steps:

        - setWeight: 20

        - pause:
            duration: 60s

        - setWeight: 50

        - pause:
            duration: 60s

        - setWeight: 100
