gitops/manifests/springboot-rollouts/service-canary.yaml
apiVersion: v1
kind: Service

metadata:
  name: springboot-canary
  namespace: springboot

spec:

  selector:
    app: springboot

  ports:
    - name: http
      port: 80
      targetPort: 8080
