gitops/manifests/springboot-rollouts/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway

metadata:
  name: springboot-gateway
  namespace: springboot

spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP

      hosts:
        - springboot.floci.bright.zorbos.com
