gitops/manifests/springboot-rollouts/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: springboot
  namespace: springboot
spec:
  host: "*.springboot.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
