gitops/manifests/springboot-rollouts/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: springboot
  namespace: springboot

spec:
  gateways:
    - springboot-gateway

  hosts:
    - springboot.floci.bright.zorbos.com

  http:

    - name: primary

      route:

        - destination:
            host: springboot
          weight: 100

        - destination:
            host: springboot-canary
          weight: 0
